# sqncr

./: Cargo.toml  README.md  index.scss
.github/workflows/: pr_check.yml
src/: app.rs  colorpicker.rs  grid.rs  main.rs  state.rs
