[package]
name = "sqncr"
version = "0.1.0"
edition = "2021"
description = ""
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "WTFPL"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
web-sys = "0.3.69"
yew = { version = "0.20", features = ["csr"] }
yewdux = "0.9.3"
